<resources>
    <string name="app_name">ArandaBibliotecas</string>
    <string name="title_activity_ubicacion_de_la_biblioteca">Map</string>
    <string name="lblTituloBuscadorDeBibliotecas">Buscar</string>
    <string name="btnFiltrarBuscadorDeBibliotecas">Filtrar</string>
    <string name="lblListaDeBibliotecas">Lista de bibliotecas</string>
    <string name="lblNombreInforBasica">NOMBRE</string>
    <string name="lblDireccionInfoBasica">DIRECCIÓN</string>
    <string name="lblTelefonoInfoBasica">TELÉFONO</string>
    <string name="btnVerUbicacionInfoBasica">VER UBICACIÓN</string>
    <string name="lblVerInformacionBasica">INFO_BÁSICA</string>
    <string name="btnVerInformacionDetallada">INFO_DETALLADA</string>
    <string name="btn_ver_info_basica">INFO_BÁSICA</string>
    <string name="lblInfoDetallada">INFO_DETALLADA</string>
    <string name="lblNombreInfoDetallada">NOMBRE</string>
    <string name="lblDireccionInfoDetallada">DIRECCIÓN</string>
    <string name="lblTelefonoInfoDetallada">TELÉFONO</string>
    <string name="lblSitioWebInfoDetallada">SITIO WEB</string>
    <string name="lblTipoInfoDetallada">TIPO</string>
    <string name="btnVerUbicacionInfoDetallada">VER UBICACIÓN</string>
    <string name="btnInformacionBasica">INFO_BÁSICA</string>


</resources>
